feat(swagger): added register api docs
